--- a/README
+++ b/README
@@ -73,6 +73,8 @@ Configuration
 =============
   Changes
 =============
+[Version 0.06]
+ - Forgot to make gates load from new location, oops
 [Version 0.05]
  - Moved Stargate files into the plugins/Stargate/ folder
  - Added migration code so old gates/portals are ported to new folder structure
