--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 This is a port of the Stargate plugin from hMod.
 Create gates that allow for instant-teleportation between large distances. Gates can be always-open, or triggered, they can be hidden, or accessible to everybody, they can share a network, or they can be split into clusters.
 This port will import your existing locations.dat file from the hMod Stargate plugin, as well as any custom .gate files you had!
-All of the iConomy code was removed.
+iConomy support added back in, only costs are create, destroy and use. No permission bypasses. 
 
 This version of Stargate is still heavily under development. There are going to be issues for a while yet.
 
@@ -14,7 +14,6 @@ Known Issues
  - Vehicle implementation is nowhere near done.
  - Signs aren't always updating, I don't know what's causing this, I think it's a Bukkit thing.
  - There are many bugs with portal material not showing properly. This is a bug I can not track down, and have no fix for at the moment.
- - Multi-world support is VERY BETA. Please don't just say "it doesn't work" I will ignore you.
  
 =============
  Permissions
@@ -82,10 +81,17 @@ teleport-message - The message when you are teleported
 portal-folder - The folder your portal databases are saved in
 gate-folder - The folder containing your .gate files
 destroyexplosion - Whether to destroy a stargate with explosions, or stop an explosion if it contains a gates controls.
+useiconomy - Whether or not to use iConomy
+createcost - The cost to create a stargate
+destroycost - The cost to destroy a stargate (Can be negative for a "refund"
+usecost - The cost to use a stargate
+not-enough-money-message - The message displayed if a player lacks money to do something
 
 =============
   Changes
 =============
+[Version 0.29]
+ - Added iConomy support. Currently only works with iConomy 4.4 until Niji fixes 4.5
 [Version 0.28]
  - Fixed an issue with removing stargates during load
 [Version 0.27]
