Enhanced network/world security.

--- a/README
+++ b/README
@@ -126,6 +126,8 @@ toowner - Whether the money from gate-use goes to the owner or nobody
 =============
   Changes
 =============
+[Version 0.4.4]
+ - Added a check for stargate.network.*/stargate.world.* on gate creation
 [Version 0.4.3]
  - Made some errors more user-friendly
  - Properly take into account portal-closed material
