--- a/README
+++ b/README
@@ -130,6 +130,8 @@ maxgates - If non-zero, will define the maximum amount of gates allowed on a net
 =============
   Changes
 =============
+[Version 0.5.0b]
+ - Updated the teleport method
 [Version 0.4.9]
  - Left-click to scroll signs up
  - Show "(Not Connected)" on fixed-gates with a non-existant destination
