--- a/README
+++ b/README
@@ -130,8 +130,10 @@ maxgates - If non-zero, will define the maximum amount of gates allowed on a net
 =============
   Changes
 =============
-[Version 0.5.0b]
+[Version 0.5.0]
  - Updated the teleport method
+ - Remove always-open gates from lists
+ - Hopefully stop Stargate and Nether interference
 [Version 0.4.9]
  - Left-click to scroll signs up
  - Show "(Not Connected)" on fixed-gates with a non-existant destination
